fixed white space on bottom of TrackShows

--- a/frontend/src/components/Track/TrackShow.css
+++ b/frontend/src/components/Track/TrackShow.css
@@ -41,7 +41,7 @@
     flex-direction: column;
     padding: 20px;
     padding-bottom: 80px;
-    height: 100vh;
+    height: 100%;
 }
 
 .track-show-header {
